Added Dockerfile, compose apps profile and Helm charts for Kubernetes